refactor(styles): switched to scss

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Joel Blaser",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.2"
+    "@parcel/transformer-sass": "^2.0.0-beta.2",
+    "parcel": "^2.0.0-beta.2",
+    "sass": "^1.34.0"
   }
 }
